fixed the footer with good bootstrap alignment

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -54,28 +54,6 @@
     width: 100%;
 }
 
-.footer-middle{
-    text-align: center;
-}
-
-.footer img{
-    width: 50px;
-    height: 50px;
-    padding-right: 20px;
-}
-
-.footer ul{
-    list-style-type: none;
-    margin-left: -50px;
-}
-
-.textfooter{
-    margin-top: 15px;
-    text-align: center;
-    font-size: 13px;
-    color: #aaa;
-    margin-bottom: 0;
-}
 
 /** new stuff */
 .icon{
